todo_app/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: todo-storage
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todoapp
          image: stevemcwin/todo-app
          volumeMounts:
            - name: todo-storage
              mountPath: /usr/src/app/files
